--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "arch"
+      BOOT: "suse"
       RAM_SIZE: "max"
       DISK_SIZE: "max"
       CPU_CORES: "max"
