--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "suse"
+      BOOT: "tails"
       DISK_SIZE: "32G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
