--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,8 @@ services:
       - /dev/net/tun
     cap_add:
       - NET_ADMIN
+    environment:
+      - NETWORK: "slirp"
     ports:
       - 8006:8006
     volumes:
