--- a/compose.yml
+++ b/compose.yml
@@ -14,7 +14,7 @@ services:
     cap_add:
       - NET_ADMIN
     environment:
-      - NETWORK: "slirp"
+      NETWORK: "slirp"
     ports:
       - 8006:8006
     volumes:
