--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "arch"
+      BOOT: "https://cdimage.debian.org/debian-cd/current/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
       DISK_SIZE: "32G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
