--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://distfiles.gentoo.org/releases/amd64/autobuilds/20251012T165136Z/install-amd64-minimal-20251012T165136Z.iso"
+      BOOT: "arch"
       DISK_SIZE: "32G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
