--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,8 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "arch"
-      DISK_SIZE: "32G"
+      BOOT: "https://cdimage.ubuntu.com/xubuntu/releases/24.04.3/release/xubuntu-24.04.3-minimal-amd64.iso"
+      DISK_SIZE: "27G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
       # the default 2-core system from github.
