--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,8 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://cdimage.debian.org/debian-cd/current/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
-      DISK_SIZE: "27G"
+      BOOT: "https://mirror.freedif.org/LinuxMint/iso/stable/22.2/linuxmint-22.2-xfce-64bit.iso" # recommended to use a mirror closest to codespace's location.
+      DISK_SIZE: "21G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
       # the default 2-core system from github.
