--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://ftp.jaist.ac.jp/pub/Linux/ubuntu-cdimage/lubuntu/releases/24.04.3/release/lubuntu-24.04.3-desktop-amd64.iso" # recommended to use a mirror closest to codespace's location.
+      BOOT: "https://download.freebsd.org/releases/amd64/amd64/ISO-IMAGES/14.3/FreeBSD-14.3-RELEASE-amd64-bootonly.iso" # recommended to use a mirror closest to codespace's location.
       DISK_SIZE: "21G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
