--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://onboardcloud.dl.sourceforge.net/project/q4os/stable/q4os-6.2-x64.r1.iso?viasf=1" # recommended to use a mirror closest to codespace's location.
+      BOOT: "https://cdimage.debian.org/debian-cd/13.1.0/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso" # recommended to use a mirror closest to codespace's location.
       DISK_SIZE: "21G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
