--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "http://ossmirror.mycloud.services/os/linux/ubuntu-releases/14.04.6/ubuntu-14.04.6-desktop-amd64.iso" # recommended to use a mirror closest to codespace's location.
-      DISK_SIZE: "21G"
+      BOOT: "https://mirror.sg.gs/ubuntu-old-releases/releases/lubuntu/releases/disco/release/lubuntu-19.04-desktop-amd64.iso"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
       # the default 2-core system from github.
