--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://mirror.sg.gs/ubuntu-old-releases/releases/kubuntu/10.04/kubuntu-10.04-desktop-amd64.iso"
+      BOOT: "https://cdimage.debian.org/debian-cd/13.1.0/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
       DISK_SIZE: "21G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
