--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://cdimage.debian.org/debian-cd/13.1.0/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
+      BOOT: "https://mirrors.dotsrc.org/lubuntu-cd/24.04.3/release/lubuntu-24.04.3-desktop-amd64.iso"
       DISK_SIZE: "21G"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
