--- a/.devcontainer/windows/compose.yml
+++ b/.devcontainer/windows/compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: windows
     image: ghcr.io/dockur/windows
     environment:
-      BOOT: "https://dl.bobpony.com/windows/10/en-us_windows_10_iot_enterprise_ltsc_2021_x64_dvd_257ad90f.iso"
+      VERSION: "https://dl.bobpony.com/windows/10/en-us_windows_10_iot_enterprise_ltsc_2021_x64_dvd_257ad90f.iso"
       RAM_SIZE: "4G"
       DISK_SIZE: "27G"
       CPU_CORES: "2"
