--- a/.devcontainer/linux/compose.yml
+++ b/.devcontainer/linux/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://mirror.ungleich.ch/mirror/devuan/devuan_excalibur/installer-iso/devuan_excalibur_6.0.0_amd64_netinstall.iso"
+      BOOT: "https://cdimage.debian.org/debian-cd/13.1.0/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
     devices:
