--- a/.devcontainer/linux/compose.yml
+++ b/.devcontainer/linux/compose.yml
@@ -3,7 +3,7 @@ services:
     image: qemux/qemu
     container_name: qemu
     environment:
-      BOOT: "https://cdimage.debian.org/debian-cd/13.1.0/amd64/iso-cd/debian-13.1.0-amd64-netinst.iso"
+      BOOT: "https://mirror.freedif.org/LinuxMint/iso/stable/22.2/linuxmint-22.2-xfce-64bit.iso"
       RAM_SIZE: "4G"
       CPU_CORES: "2"
     devices:
